policies/kyverno/block-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-latest-tag
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: check-image-tag-not-latest
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - sa-p8-dev
                - sa-p8-prod
      validate:
        message: "El uso del tag 'latest' está prohibido. Use un tag semántico."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
